# simple-token-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
companies/: models.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py
companies/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
core/: settings.py  urls.py
tokens/: models.py  serializers.py  urls.py  views.py
tokens/migrations/: 0001_initial.py
tokens/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
